Reforma en DebtService para obtener los detalles del carrito